refactor: SonarLint格式调整